<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrum Daily Timer</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tap_for_next">Tap for next</string>
    <string name="tap_to_start_daily">Tap to start daily</string>
    <string name="tap_for_first_participant">Tap for first participant</string>
    <string name="tap_to_finish_daily">Tap to finish daily</string>
    <string name="tap_when_done">Tap when last participant is done</string>
    <string name="participant">Participant:</string>
    <string name="total_meeting_time">Total meeting time:</string>
    <string name="report_title">Meeting Report</string>
    <string name="number_of_timeouts">Number of timeouts:</string>
    <string name="warmup_time">Preparation time:</string>
    <string name="settings">Settings</string>
    <string name="number_of_participants">Number of participants</string>
    <string name="time_slot_duration">Time slot duration (seconds)</string>
    <string name="swipe_to_finish">&lt;&lt;swipe to finish daily</string>
    <string name="press_back_again">Press back again to exit</string>

</resources>