<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wholeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".ChronoActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/report_title"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/totalTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/total_meeting_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/totalTimeDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="00:00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/timeOutsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/number_of_timeouts"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/timeOutsDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/warmUpTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:text="@string/warmup_time"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/warmUpTimeDataTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="00:00"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="50sp" />

     </LinearLayout>

</LinearLayout>