<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChronoActivity" >

    <LinearLayout
        android:id="@+id/wholeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/upperHalfLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/participantTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_margin="10dp"
                android:text="@string/participant"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:visibility="gone" />

            <TextView
                android:id="@+id/countDownTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:text="00:00"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="120sp" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:max="300"
                android:paddingBottom="20dp"
                android:paddingTop="20dp"
                android:progress="0" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/lowerHalfLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tapForNextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="10dp"
                android:text="@string/tap_to_start_daily"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/totalTimeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:text="@string/total_meeting_time"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/swipeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|right"
                android:layout_marginRight="-120dp"
                android:text="@string/swipe_to_finish"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </FrameLayout>
    </LinearLayout>

</FrameLayout>