<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wholeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:scrollbars="vertical"
    tools:context=".ChronoActivity" >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/settings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/numberOfParticipantsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/number_of_participants"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/numberOfParticipantsEditText"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:inputType="number"
            android:text="5"
            android:textAlignment="textEnd"
            android:textColor="@color/text_color"
            android:textSize="35sp" >

        </EditText>

     </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/slotTimeDurationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/time_slot_duration"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/slotTimeDurationEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="right|center_vertical"
            android:inputType="number"
            android:text="60"
            android:textAlignment="textEnd"
            android:textColor="@color/text_color"
            android:textSize="35sp" />

     </LinearLayout>

</LinearLayout>